[gd_scene load_steps=8 format=2]

[ext_resource path="res://attacks/super_attack/sattack9/attack.gd" type="Script" id=1]
[ext_resource path="res://sprites/battle/fire_projectile.png" type="Texture" id=2]
[ext_resource path="res://custom_classes/periodic.gd" type="Script" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.730263, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )
width = 128

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 2
emission_box_extents = Vector3( 25, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, -20, 0 )
initial_velocity = 20.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 4 )

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Particles2D1" type="Particles2D" parent="."]
material = SubResource( 1 )
position = Vector2( 83, 480 )
emitting = false
amount = 16
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="Particles2D2" type="Particles2D" parent="."]
material = SubResource( 1 )
position = Vector2( 235, 480 )
emitting = false
amount = 16
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="destroy" type="Timer" parent="."]
one_shot = true

[node name="Periodic" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="destroy" to="." method="_on_destroy_timeout"]
